--- a/bio.html
+++ b/bio.html
@@ -28,10 +28,10 @@
     <main>
       <section id="bio">
         <p>
-          I am a copy editor who spends much of his free time reading, writing,
+          I am a freelance writer and editor who spends much of his free time reading, writing,
           and playing games. I am passionate about books, RPGs — both video and
           tabletop — history, philosophy, and science. My creative work is
-          rooted in these interests. I am not one given to sentimentalities of
+          rooted in these interests. I am not one given to sentiments of
           purpose or providence, but I do believe I was put on this Earth to
           create stories and to build worlds.
         </p>
